feat(config): add BoostedYAML updates and vanilla statistics toggles
Ship config-version auto-merge via BoostedYAML, practice-friendly PLAYER_KILLS/DEATHS switches, and expose ServerConfiguration through the API, SDK, and remote /settings endpoint for 2.0.01.