@@ -3,7 +3,6 @@ package com.monkey.ultimatebot.config;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
@@ -19,28 +18,29 @@ class ConfigurateRuntimeSettingsLoaderTest {
     @Test
     void loadsTypedCacheSettingsFromYaml() throws IOException {
         Path configuration = temporaryDirectory.resolve("config.yml");
-        Files.write(
+        Files.writeString(
                 configuration,
-                String.join(
-                                "\n",
-                                "performance:",
-                                "  caches:",
-                                "    target:",
-                                "      maximum-size: 512",
-                                "      expire-after-write-ms: 125",
-                                "    block-state:",
-                                "      maximum-size: 4096",
-                                "      expire-after-write-ms: 2000",
-                                "protection-world:",
-                                "  allow-bot-explosion-block-damage: true",
-                                "  anti-dupe: false",
-                                "  combat-block-lifetime-seconds: 45",
-                                "  max-active-combat-blocks: 512",
-                                "  combat-entity-lifetime-seconds: 90",
-                                "  max-active-combat-entities: 128",
-                                "  respect-protection-plugins: false",
-                                "")
-                        .getBytes(StandardCharsets.UTF_8));
+                """
+                performance:
+                  caches:
+                    target:
+                      maximum-size: 512
+                      expire-after-write-ms: 125
+                    block-state:
+                      maximum-size: 4096
+                      expire-after-write-ms: 2000
+                protection-world:
+                  allow-bot-explosion-block-damage: true
+                  anti-dupe: false
+                  combat-block-lifetime-seconds: 45
+                  max-active-combat-blocks: 512
+                  combat-entity-lifetime-seconds: 90
+                  max-active-combat-entities: 128
+                  respect-protection-plugins: false
+                vanilla-statistics:
+                  kills: false
+                  deaths: false
+                """);
 
         RuntimeSettings settings = new ConfigurateRuntimeSettingsLoader(
                         configuration, Logger.getLogger(ConfigurateRuntimeSettingsLoaderTest.class.getName()))
@@ -52,15 +52,20 @@ class ConfigurateRuntimeSettingsLoaderTest {
         assertThat(settings.blockStateCache().expireAfterWrite()).isEqualTo(Duration.ofSeconds(2));
         assertThat(settings.worldProtection())
                 .isEqualTo(new RuntimeSettings.WorldProtectionSettings(true, false, 45, 512, 90, 128, false));
+        assertThat(settings.vanillaStatistics().trackKills()).isFalse();
+        assertThat(settings.vanillaStatistics().trackDeaths()).isFalse();
+        assertThat(settings.configVersion()).isEqualTo(1);
     }
 
     @Test
     void supportsLegacyExplosionBlockDamagePermission() throws IOException {
         Path configuration = temporaryDirectory.resolve("legacy-config.yml");
-        Files.write(
+        Files.writeString(
                 configuration,
-                String.join("\n", "protection-world:", "  block-damage: true", "")
-                        .getBytes(StandardCharsets.UTF_8));
+                """
+                protection-world:
+                  block-damage: true
+                """);
 
         RuntimeSettings settings = new ConfigurateRuntimeSettingsLoader(
                         configuration, Logger.getLogger(ConfigurateRuntimeSettingsLoaderTest.class.getName()))
@@ -72,22 +77,20 @@ class ConfigurateRuntimeSettingsLoaderTest {
     @Test
     void fallsBackPerInvalidValue() throws IOException {
         Path configuration = temporaryDirectory.resolve("invalid.yml");
-        Files.write(
+        Files.writeString(
                 configuration,
-                String.join(
-                                "\n",
-                                "performance:",
-                                "  caches:",
-                                "    target:",
-                                "      maximum-size: 0",
-                                "      expire-after-write-ms: -1",
-                                "protection-world:",
-                                "  combat-block-lifetime-seconds: -1",
-                                "  max-active-combat-blocks: 0",
-                                "  combat-entity-lifetime-seconds: -1",
-                                "  max-active-combat-entities: 0",
-                                "")
-                        .getBytes(StandardCharsets.UTF_8));
+                """
+                performance:
+                  caches:
+                    target:
+                      maximum-size: 0
+                      expire-after-write-ms: -1
+                protection-world:
+                  combat-block-lifetime-seconds: -1
+                  max-active-combat-blocks: 0
+                  combat-entity-lifetime-seconds: -1
+                  max-active-combat-entities: 0
+                """);
 
         RuntimeSettings settings = new ConfigurateRuntimeSettingsLoader(
                         configuration, Logger.getLogger(ConfigurateRuntimeSettingsLoaderTest.class.getName()))
